[tool.poetry]
name = "async-python"
version = "0.1.0"
description = ""
authors = ["Aaron Long <you@example.com>"]

[tool.poetry.dependencies]
python = "3.8.3"
aiohttp = "^3.8.1"
requests = "^2.26.0"
prompt-toolkit = "^3.0.24"
structlog = "^21.5.0"
pandas = "^1.4.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
